[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dawiq"
description = "Package to construct Qt widgets from dataclasses"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["Dataclass", "GUI"]
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
repository = "https://github.com/JSS95/dawiq"

[tool.setuptools.dynamic]
version = {attr = "dawiq.version.__version__"}
dependencies = {file = ["requirements/install.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements/test.txt"]}
test-ci = {file = ["requirements/test.txt", "requirements/test-ci.txt"]}
doc = {file = ["requirements/doc.txt"]}
full = {file = [
    "requirements/test.txt",
    "requirements/doc.txt",
]}
